Changed diagrams for FSM and DAG

--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -228,7 +228,7 @@ The device is worn by a participant on the wrist for measuring activity and gene
 \begin{figure}[H]
 	\begin{center}
 		 \includegraphics[width=1\textwidth]{HardwareUI_FSM}
-		\caption{FSM for Hardware UI}
+		\caption{Flow chart model for Hardware UI (watch display)}
 		\label{HardwareUI_FSM} 
 	\end{center}
 \end{figure}
@@ -287,7 +287,7 @@ For more examples of the Software User Unterface, refer to Appendix \ref{Softwar
 \begin{figure}[H]
 	\begin{center}
 		 \includegraphics[width=1\textwidth]{SoftwareUI_FSM}
-		\caption{FSM for Software UI}
+		\caption{Flow chart model of windows for Software UI}
 		\label{SoftwareUI_FSM} 
 	\end{center}
 \end{figure}
