--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -679,7 +679,7 @@ Below are the functional requirements of the device as well as the rationale.
 \begin{center}
 \begin{tabular}{|l|p{14cm}|}
  \hline
- R6 \label{R6} (Prority) &The device will store all relavent data every time an activity takes place or a prompt is answered on the device.\\ [0.5ex]
+ R6 \label{R6} (Priority) &The device will store all relavent data every time an activity takes place or a prompt is answered on the device.\\ [0.5ex]
  \hline
  Rationale & The data will have to be stored in the on-board memory of the device so that the researcher can extract it.\\ 
  \hline
