added list of figures

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -36,6 +36,7 @@
 
 \tableofcontents
 \listoftables
+\listoffigures
 
 \newpage
 
@@ -48,6 +49,7 @@
 2022-09-26 & Back End Developers & Initial documentation\\
 2023-04-02 & Jonathan Hai & Incorporated TA comments for rev1\\
 2023-04-04 & Jessica Bae & Added logo and style to the document\\
+2023-04-05 & Oliver Foote & Added list of figures\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -63,9 +65,12 @@ Weekly meetings are to be held every Saturday at 8:00PM, (with an alternative op
 All primary communication is to be done through the team's Discord server, including all meetings. Secondary communication will be through the Facebook group chat only if necessary.\\
 
 The following is a screen shot of this team's Discord server:\\
-\begin{center}
-    \includegraphics{DiscordServer}
-\end{center}
+
+\begin{figure}[!htb]
+        \center{\includegraphics{DiscordServer.png}}
+        \caption{\label{fig:my-label} Discord server channels}
+\end{figure}
+
 
 \section{Team Member Roles}
 
