--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -13,7 +13,8 @@
 
 \usepackage{titlesec}
 \titleformat{\section}{\large\bfseries\color{RedOrange}}{\rlap{\color{black}\rule[-0.3cm]{\linewidth}{1cm}} {\textcolor{RedOrange}{\thesection}}}{1em}{}
-
+\usepackage[none]{hyphenat} 
+\usepackage{longtable}
 
 \title{\textbf{Problem Statement and Goals\\\progname \\ \vspace{2cm} \includegraphics[width=0.5\textwidth]{../logo.jpg}}}
  \pagecolor{black}\afterpage{\nopagecolor}
@@ -58,6 +59,7 @@ Since Dr. Macedo's EMA work is focused on analyzing the daily activities and sym
 Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to capture: shuffling, limping, slower walking, etc.\\
 
 The team at SReS requires a system which detects special (sometimes small-scale) movements from participants, relays prompts and information to participants based on said movements, and stores, analyzes, and displays movement data gathered throughout this process.\\
+
 
 \pagebreak
 
@@ -106,38 +108,38 @@ The constraints contained within this section were given by Dr. Luciana Macedo's
 
 \section{Base Goals}
 \begin{center}
-    \begin{tabular}{ | m{7em} | m{32em}| }
+    \begin{longtable}{| m{2em} | m{7em} | m{16em}| m{14em} | }
         \hline
-        \textbf{Goal}                                    & \textbf{Explanation and Reasoning}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               \\
+        \textbf{No.} & \textbf{Goal}                                    & \textbf{Explanation} & \textbf{Reasoning}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               \\
         \hline
-        Tacking Minor Movements                          & Most activity trackers make it difficult to track minor movements.
-        They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.                                                                                                                                                                                                                                                       \\
+       1) & Tacking Minor Movements                          & Most activity trackers make it difficult to track minor movements.
+        They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes. & The tracker should have a good amount of sensitivity, so that minor movements like limping are appropriately accounted for.                                                                                                                                                                                                                                                       \\
         \hline
-        Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibile prompting system that includes visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
+      2)  & Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as pausing after an activity has occurred.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. & Having a visible prompting system that includes visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
         \hline
-        Highly \linebreak Simplistic User Interface and Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so.                                                                                                                                                                         \\
+       3)& Simplistic User Interface and Hardware design &  It is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. & The user base for this product will be the older adult population, some of whom may not use smartphones or smart watches. The product improves the likelihood that a user will fill out the survey successfully and quickly when prompted to do so.                                                                                                                                                                         \\
         \hline
-        Relevant \linebreak Presentation of Data                   & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs. In addition, the option to export the raw data collected during the EMA period will be available, as well as the processed versions of the data.                                                                                                                                                                                      \\
+       4) & Relevant \linebreak Presentation of Data                   & The data will be processed into an easy to interpret graphical or image based format that can be used to interpret the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. & The researcher would view and collect data from the UI and will allow them to better understand the participant's movements and keep track of their rehabilitation programs. In addition, the option to export the raw data collected during the EMA period will be available, as well as the processed versions of the data.                                                                                                                                                                                      \\
 	\hline
-	Customizeable Event Types and Thresholds			& Researchers will be able to customize the types of events that the device will detect and the thresholds that will activate them according to the needs of each individual EMA session and patient. Setting up the types of events to detect and their thresholds will be done before each monitoring period. The system will be configured in a way that will allow for a broad range of possible events to track, and will have many options to change properties of events and the types and levels of triggers for said events.
+	5) & Customizeable Event Types and Thresholds			& Researchers will be able to customize the types of events that the device will detect and the thresholds that will activate them according to the needs of each individual EMA session and patient. Setting up the types of events to detect and their thresholds will be done before each monitoring period. The system will be configured in a way that will allow for a broad range of possible events to track, and will have many options to change properties of events and the types and levels of triggers for said events. & The configuration of the device needs to be changed by the researcher to fit each participant's requirements.
 \\
         \hline
-    \end{tabular}
+    \end{longtable}
 \end{center}
 
 \pagebreak
 
 \section{Stretch Goals}
 \begin{center}
-    \begin{tabular}{ | m{7em} | m{32em}| }
+    \begin{tabular}{ | m{2em} | m{7em} | m{16em}| m{12em} | }
         \hline
-        \textbf{Goal}                   & \textbf{Explanation and Reasoning}                                                                                                                                                                                                                                                                                                                                                           \\
+        \textbf{No.} & \textbf{Goal}                   & \textbf{Explanation} &  \textbf{Reasoning}                                                                                                                                                                                                                                                                                                                                                           \\
         \hline
-        Anomaly \linebreak Detection               & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\
+        1) & Anomaly \linebreak Detection               & The device should detect when certain anomalies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. & Detecting anomalies would improve user safety and quality of data collection. \\
         \hline
-        Geotagging Events and Movements & Geotracking users and movements could show if a majority of movement is happening close to home or away form home; for example. This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner.                                                                                                  \\
+      2) &   Geo-tagging Events and Movements & Geo-tracking users and movements could show if majority of activity is closer to home or away from home. &  This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner.                                                                                                  \\
         \hline
-        Movement based-charging system  & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. As part of this goal, reducing power draw would be an important aspect to make the movement based charging worthwhile.                                                                                                            \\
+      3) &   Movement based-charging system  & Having a system that charges using movement could be beneficial to users and help extend usable time. & This would mean less charging and greater convenience. As part of this goal, reducing power draw would be an important aspect to make the movement based charging worthwhile.                                                                                                            \\
         \hline
     \end{tabular}
 \end{center}
