--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -79,8 +79,14 @@
 
 \section{Introduction}
 
-In today's society, technology and engineering solutions are simply expected to work. The multitude of complex engineering designs and systems created to meet the needs of the world are expected to be infallible in the eyes of the public. When failures do occur, society considers them it shocking. When these failures happen in engineering systems critical to an aspect of safety, health, or some other critical role, people can die. In many cases, these failures are predictable and preventable in the design phase. The causes of such failures are known as hazards.
+The EMAnator system currently under development by the Back End Developers aims to assist researchers in performing Ecological Momentary Assessment for older adults with spinal issues. The goal of this design is to construct a system which fulfills all the requirements specified in the \href{https://github.com/zakerl/Capstone_Project/blob/desDoc_Labeeb/docs/SRS/SRS.pdf}{System Requirements Specification}, and that meets the needs of EMA researchers.\\
+
+The Back End Developers hope this document serves as a useful guide for identifying the potential hazards that may be encountered in development or deployment of the design. \\
+
 \subsection{Purpose of Hazard Analysis}
+
+
+In today's society, technology and engineering solutions are simply expected to work. The multitude of complex engineering designs and systems created to meet the needs of the world are expected to be infallible in the eyes of the public. When failures do occur, society considers them it shocking. When these failures happen in engineering systems critical to an aspect of safety, health, or some other critical role, people can die. In many cases, these failures are predictable and preventable in the design phase. The causes of such failures are known as hazards.\\
 
 It is therefore necessary for engineers to perform extensive and thorough assessments of the systems they design in the aim to eliminate as many failures as reasonably possible. This is process is called hazard analysis.\\
 
