adjusted awkward pagebreaks

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -96,6 +96,7 @@ More formally, hazard analysis is a step in the process to assess risk within an
 
 The purpose of this document is to perform this hazard analysis on the system to be designed by the Back End Developers. This document will first provide a description of the system boundaries and components of the system on an abstract level (both the hardware and software components), and then will list and justify the assumptions made in order to perform this hazard analysis. These assumptions will be kept to a minimum, in the hope to reduce the number of potentially overlooked hazards. The document will then describe the Failure Mode and Effect Analysis (FMEA) done by the team of the Back End Developers, and then detail the specific safety and security requirements that have been discovered in the process of performing the hazard analysis. The document will end with a roadmap describing the steps which will be taken in order to implement the novel discovered requirements, the timeline in which they will be implemented, and what considerations must be made regarding said requirements.
 
+\newpage
 \section{System Boundaries and Components}
 The system consists of several components that make up the entire system.
 
@@ -808,7 +809,7 @@ For example BED\_ERR\_NONE represent that the system is working correctly. Some 
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\newpage
 \bibliographystyle{plainnat}
 \bibliography{../../refs/References}
 
