--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -391,7 +391,7 @@ characteristi	cs and lists the system constraints.  \\\\
 \subsection{System Context}
 
 This system in theory is very simple. An array of sensors grabs info regarding the position, speed, orientation, etc. and uses that information to understand the current state of the user. This data is then used to generate prompts that the user will answer and all the collected data is compiled, processed and stored within the system. Finally, researchers will analyze the collected data and generate observations. 
-\begin{figure}[h!]
+\begin{figure}[H]
 
 \begin{center}
  \includegraphics[width=.95\textwidth]{System Context Diagram}
