--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -254,6 +254,7 @@ The following methods will be used for static code analysis:
   \item A SAST tool will be used to scan source code, binary and byte code to reveal vulnerabilities.
   \item Static analysis tools such as Pylint and lint described in \ref{Automation} will be used to find bugs in code.
 \end{itemize}
+\newpage
 Dynamic code testing will help identify exploitable vulnerabilities. The following methods will be used for dynamic code analysis:
 \begin{itemize}
   \item A DAST tool will be used as a black-box tester. It will input malicious SQL queries, long input strings and invalid data to exploit assumptions made by the developers.
